--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "taimscore",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@azure/msal-browser": "^3.24.0",
-    "@azure/msal-react": "^2.1.0",
-    "@material-tailwind/react": "^2.1.10",
-    "@react-oauth/google": "^0.12.1",
-    "@reduxjs/toolkit": "^2.2.7",
-    "@tailwindcss/forms": "^0.5.9",
-    "axios": "^1.7.7",
-    "jwt-decode": "^4.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.1",
-    "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.44",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
-  }
+    "name": "taimscore",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@azure/msal-browser": "^3.24.0",
+        "@azure/msal-react": "^2.1.0",
+        "@material-tailwind/react": "^2.1.10",
+        "@react-oauth/google": "^0.12.1",
+        "@reduxjs/toolkit": "^2.2.7",
+        "@tailwindcss/forms": "^0.5.9",
+        "axios": "^1.7.7",
+        "jwt-decode": "^4.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.53.0",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.26.1",
+        "redux": "^5.0.1",
+        "redux-persist": "^6.0.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.9.0",
+        "@types/react": "18.2.19",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.9.0",
+        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+        "eslint-plugin-react-refresh": "^0.4.9",
+        "globals": "^15.9.0",
+        "postcss": "^8.4.44",
+        "tailwindcss": "^3.4.10",
+        "typescript": "^5.5.3",
+        "typescript-eslint": "^8.0.1",
+        "vite": "^5.4.1"
+    }
 }
