--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "@reduxjs/toolkit": "^2.2.7",
         "@tailwindcss/forms": "^0.5.9",
         "axios": "^1.7.7",
+        "chart.js": "^4.4.5",
         "jwt-decode": "^4.0.0",
         "react": "^18.3.1",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-google-charts": "^5.1.0",
         "react-hook-form": "^7.53.0",
